Fix to cut off background in services and support

--- a/src/stylesheets/pages/_services.scss
+++ b/src/stylesheets/pages/_services.scss
@@ -6,7 +6,7 @@
     background-image: url('/assets/svg/services-splash.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: bottom;
     @media screen and (max-width: $smallScreen) {
       height: 400px;
     }
